Update relevance criteria label in index.html

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
           const methodKeys = ['Ours', 'Anyportal', 'Lumen', 'LightAVideo'];
           const criteria = [
-            { key: 'relevance', label: '(a) relevance to the prompt 视频质量和文本的对齐程度' },
+            { key: 'relevance', label: '(a) relevance to the prompt 视频新背景的生成质量和文本的对齐程度' },
             { key: 'temporal', label: '(b) temporal coherence 视频帧间连续性和平滑度' },
             { key: 'foreground', label: '(c) preservation of foreground details and motion 相比于原视频，前景细节和运动的保留程度和一致性' },
             { key: 'relighting', label: '(d) quality and harmonization of relighting on the foreground 前景重光照的质量和光照和谐程度' },
